--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <button onclick="calculate()">Calculate</button>
 
     <p class="result" id="result">Result: --</p>
-    <p class="rank" id="rank">Rank: --</p>
+    <p class="rank" id="rank">Grade: --</p>
+    <p class="grade" id="grade">Grade Point: --</p>
   </div>
 
   <script src="script.js"></script>
